--- a/estilomasterclass.css
+++ b/estilomasterclass.css
@@ -177,7 +177,8 @@ body{
     background-color: white;
     color: black;
     cursor: pointer;
-    transform: scale(1.2);
+    transform: scale(1.1);
+    transition: transform 0.2s;
 	
   }
 
